@@ -47,6 +47,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #19544 and #6516: Restore support for --user and --group parameters to
+  sdist command accidentally rolled back as part of the distutils2 rollback.
+
 - Issue #13674: Prevented time.strftime from crashing on Windows when given
   a year before 1900 and a format of %y.
 
